src-tauri/log4.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
warning: unused import: `std::time::Duration`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:8:5
  |
8 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Interface`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:9:35
  |
9 | use windows::core::{ComInterface, Interface};
  |                                   ^^^^^^^^^

warning: unused imports: `LPARAM` and `WPARAM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:15:40
   |
15 | use windows::Win32::Foundation::{HWND, LPARAM, WPARAM};
   |                                        ^^^^^^  ^^^^^^

warning: unused imports: `D3D11_BIND_SHADER_RESOURCE`, `D3D11_BIND_UNORDERED_ACCESS`, `D3D11_USAGE_DEFAULT`, `ID3D11Buffer`, `ID3D11RenderTargetView`, and `ID3D11ShaderResourceView`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:17:5
   |
17 |     ID3D11Buffer, ID3D11ComputeShader, ID3D11Device, ID3D11DeviceContext, ID3D11RenderTargetView,
   |     ^^^^^^^^^^^^                                                          ^^^^^^^^^^^^^^^^^^^^^^
18 |     ID3D11ShaderResourceView, ID3D11Texture2D, ID3D11UnorderedAccessView,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
19 |     D3D11_BIND_CONSTANT_BUFFER, D3D11_BIND_SHADER_RESOURCE, D3D11_BIND_UNORDERED_ACCESS,
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |     D3D11_BUFFER_DESC, D3D11_CPU_ACCESS_WRITE, D3D11_MAPPED_SUBRESOURCE, D3D11_MAP_WRITE_DISCARD,
21 |     D3D11_TEXTURE2D_DESC, D3D11_USAGE_DEFAULT, D3D11_USAGE_DYNAMIC,
   |                           ^^^^^^^^^^^^^^^^^^^

warning: unused import: `DXGI_FORMAT_R8G8B8A8_UNORM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:24:64
   |
24 |     DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM, DXGI_FORMAT_R8G8B8A8_UNORM,
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `IDXGISwapChain`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:28:33
   |
28 |     IDXGIDevice, IDXGIFactory2, IDXGISwapChain, IDXGISwapChain1, DXGI_SCALING_NONE,
   |                                 ^^^^^^^^^^^^^^

warning: unused imports: `GetForegroundWindow`, `PostThreadMessageW`, and `TranslateMessage`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:39:23
   |
39 |     DispatchMessageW, GetForegroundWindow, MsgWaitForMultipleObjectsEx, PeekMessageW,
   |                       ^^^^^^^^^^^^^^^^^^^
40 |     PostThreadMessageW, TranslateMessage, MSG, MWMO_INPUTAVAILABLE, PM_REMOVE, QS_ALLINPUT,
   |     ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `s`
 --> src\infrastructure\windowsimpl\scaling\shader.rs:5:12
  |
5 |     core::{s, PCSTR},
  |            ^

warning: unused import: `crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:1:5
  |
1 | use crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `regex::Regex`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:3:5
  |
3 | use regex::Regex;
  |     ^^^^^^^^^^^^

warning: unused imports: `HashMap` and `HashSet`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:4:24
  |
4 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^  ^^^^^^^

error[E0061]: this method takes 2 arguments but 3 arguments were supplied
    --> src\infrastructure\windowsimpl\scaling\processor.rs:410:68
     |
410  | ...                   context_for_thread.CSSetConstantBuffers(
     |                                          ^^^^^^^^^^^^^^^^^^^^
...
413  | ...                       Some(cbs.as_ptr()),
     |                           ------------------ unexpected argument #3 of type `std::option::Option<*const std::option::Option<ID3D11Buffer>>`
     |
note: expected `Option<&[Option<ID3D11Buffer>]>`, found integer
    --> src\infrastructure\windowsimpl\scaling\processor.rs:412:53
     |
412  | ...                   1,
     |                       ^
     = note: expected enum `std::option::Option<&[std::option::Option<ID3D11Buffer>]>`
                found type `{integer}`
note: method defined here
    --> C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.51.1\src\Windows\Win32\Graphics\Direct3D11\mod.rs:3583:19
     |
3583 |     pub unsafe fn CSSetConstantBuffers(&self, startslot: u32, ppconstantbuffers: ::core::option::Option<&[::core::option::Option<ID3D11Bu...
     |                   ^^^^^^^^^^^^^^^^^^^^
help: remove the extra argument
     |
412  -                                                     1,
412  +                                                     /* std::option::Option<&[std::option::Option<ID3D11Buffer>]> */,
     |

error[E0061]: this method takes 2 arguments but 3 arguments were supplied
    --> src\infrastructure\windowsimpl\scaling\processor.rs:417:68
     |
417  | ...                   context_for_thread.CSSetShaderResources(
     |                                          ^^^^^^^^^^^^^^^^^^^^
...
420  | ...                       Some(srvs.as_ptr()),
     |                           ------------------- unexpected argument #3 of type `std::option::Option<*const std::option::Option<ID3D11ShaderResourceView>>`
     |
note: expected `Option<&[Option<...>]>`, found integer
    --> src\infrastructure\windowsimpl\scaling\processor.rs:419:53
     |
419  | ...                   1,
     |                       ^
     = note: expected enum `std::option::Option<&[std::option::Option<ID3D11ShaderResourceView>]>`
                found type `{integer}`
note: method defined here
    --> C:\Users\nnnma\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.51.1\src\Windows\Win32\Graphics\Direct3D11\mod.rs:3568:19
     |
3568 |     pub unsafe fn CSSetShaderResources(&self, startslot: u32, ppshaderresourceviews: ::core::option::Option<&[::core::option::Option<ID3D...
     |                   ^^^^^^^^^^^^^^^^^^^^
help: remove the extra argument
     |
419  -                                                     1,
419  +                                                     /* std::option::Option<&[std::option::Option<ID3D11ShaderResourceView>]> */,
     |

For more information about this error, try `rustc --explain E0061`.
warning: `launcherg` (bin "launcherg") generated 11 warnings
error: could not compile `launcherg` (bin "launcherg") due to 2 previous errors; 11 warnings emitted
